# angled

./: CMakeLists.txt  README.md
include/: Euler.h  Quaternion.h
src/: Euler.cpp  Euler.h  Matrix.cpp  Matrix.h  Matrix.hpp  Quaternion.cpp  Quaternion.h  euler.h  quaternion.h
tests/: test.cpp
